# compose-stylus

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  release.yml
gradle/: libs.versions.toml
stylus/: build.gradle.kts
stylus-compose/: build.gradle.kts
stylus-compose/src/androidInstrumentedTest/kotlin/com/mohamedrejeb/stylus/compose/: PenInkSurfaceTest.kt
stylus-compose/src/androidMain/kotlin/com/mohamedrejeb/stylus/compose/: PenInkSurface.android.kt  PenInkSurface.kt  PenInputModifier.android.kt
stylus-compose/src/commonMain/kotlin/com/mohamedrejeb/stylus/compose/: PenGestureRecognizer.kt  PenGestures.kt  PenInkState.kt  PenInkSurface.kt  PenInputModifier.kt  PenStroke.kt  PointerEventToPenEvent.kt  PointerPenInputModifier.kt  RibbonTessellation.kt  SmoothPath.kt
stylus-compose/src/commonTest/kotlin/com/mohamedrejeb/stylus/compose/: PenGestureRecognizerTest.kt
stylus-compose/src/iosMain/kotlin/com/mohamedrejeb/stylus/compose/: PenInputModifier.ios.kt
stylus-compose/src/jvmMain/kotlin/com/mohamedrejeb/stylus/compose/: ComposePenInputManager.kt  PenInputModifier.jvm.kt  PenInputWindowProvider.kt
stylus-compose/src/jvmTest/kotlin/com/mohamedrejeb/stylus/compose/: ComposePenInputManagerPipelineTest.kt  RibbonTessellationTest.kt  SmoothPathScreenshotTest.kt  (+1 more)
stylus-demo/stylus-demo-android/: build.gradle.kts
stylus-demo/stylus-demo-android/src/main/: AndroidManifest.xml
stylus-demo/stylus-demo-jvm/: build.gradle.kts
stylus-demo/stylus-demo-jvm/src/main/kotlin/: NetAlg.kt  json.kt  main.kt  path.kt  svg.kt  svgarc.kt  tangent.kt
stylus-demo/stylus-demo-jvm/src/main/kotlin/stylus/: DrawMathUtils.kt  SmoothStroke.kt
stylus-demo/stylus-demo-web/: build.gradle.kts
stylus-demo/stylus-demo-web/src/wasmJsMain/resources/: index.html
stylus-jni/: build.gradle.kts
stylus-jni/src/main/cpp/: CMakeLists.txt
stylus-jni/src/main/cpp/dependencies/jni-voithos/include/: Exception.h  JavaPrimitive.h  JavaThrowable.h
stylus-jni/src/main/cpp/dependencies/macos/cocoa/src/: CocoaStylusHook.mm
stylus-jni/src/main/cpp/include/: JNI_Pen.h  JNI_PenContext.h  JNI_PenEvent.h  JNI_PenEventCallback.h  JNI_PenInputSource.h
stylus-jni/src/main/cpp/src/: JNI_Pen.cpp  JNI_PenContext.cpp  JNI_PenEvent.cpp  JNI_PenEventCallback.cpp  JNI_PenInputSource.cpp
stylus/src/androidMain/kotlin/com/mohamedrejeb/stylus/: CurrentTimeMillis.android.kt  PenInputSource.android.kt
stylus/src/commonMain/kotlin/com/mohamedrejeb/stylus/: PenButton.kt  PenEvent.kt  PenEventCallback.kt  PenEventType.kt  PenInputSource.kt  PenTool.kt
stylus/src/commonTest/kotlin/com/mohamedrejeb/stylus/: PenEnumsTest.kt  PenEventTest.kt
stylus/src/iosMain/kotlin/com/mohamedrejeb/stylus/: CurrentTimeMillis.ios.kt  PenInputSource.ios.kt
stylus/src/jvmMain/kotlin/com/mohamedrejeb/stylus/: PenInputSource.jvm.kt
stylus/src/jvmTest/kotlin/com/mohamedrejeb/stylus/: JvmPenEventCallbackWrapperTest.kt
stylus/src/wasmJsMain/kotlin/com/mohamedrejeb/stylus/: CurrentTimeMillis.wasmJs.kt  PenInputSource.wasmJs.kt
(+14 files in other folders)
